	PR fortran/33592 	* trans.c (gfc_call_realloc): Fix the logic and rename variables.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130072 138bc75d-0d04-0410-961f-82ee72b054a4